<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/label_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tutorial"
        android:orderInCategory="100"
        android:title="Tuto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_store"
        android:orderInCategory="100"
        android:title="Store"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/label_website"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/label_logout"
        app:showAsAction="never" />
</menu>