<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_post_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:duplicateParentState="false"
            android:text="@string/label_title_blog"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_relative_time_post_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_post"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_image_post_details"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/label_todo"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_description_post_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/label_description_blog"
            android:textSize="18sp"
            android:textStyle="italic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/label_todo"
            app:srcCompat="@android:drawable/ic_dialog_info" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
