<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginModel"
            type="fr.oxygames.app.viewModel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_background"
        tools:context=".activity.LoginActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.OxyGameS.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryDark">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/title_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/email_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="70dp"
            android:autofillHints=""
            android:drawableStart="@android:drawable/sym_action_email"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="@={loginModel.userEmail}"
            app:layout_constraintBottom_toTopOf="@+id/password_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_menu"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="40dp"
            android:drawableStart="@android:drawable/ic_secure"
            android:drawableLeft="@android:drawable/ic_secure"
            android:hint="@string/label_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="@={loginModel.userPassword}"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/ic_button_background"
            android:gravity="center_horizontal"
            android:text="@string/label_connection"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/register_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            app:layout_constraintVertical_bias="0.835" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="177dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="95dp"
            android:gravity="center_horizontal"
            android:text="@string/label_inscription"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/copy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <TextView
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="170dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>