<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MessageChatActivity">

    <data>

        <variable
            name="DataUser"
            type="fr.oxygames.app.binding.DataUser" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/barLayout_message_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.OxyGameS.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_message_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryDark"
                app:popupTheme="@style/Theme.OxyGameS.PopupOverlay">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_chat"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_avatar">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:id="@+id/username_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:text="@string/label_username"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="26dp">

                </TextView>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_chats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relative_layout_bottom_chat"
            android:layout_below="@+id/barLayout_message_chat">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/relative_layout_bottom_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorProfile"
            android:padding="6dp">

            <ImageView
                android:id="@+id/attach_image_file_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/ic_attach_file"
                android:contentDescription="@string/description_image_file"
                android:layout_alignParentLeft="true">

            </ImageView>

            <EditText
                android:id="@+id/text_message_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_toStartOf="@+id/send_message_btn"
                android:layout_toEndOf="@+id/attach_image_file_btn"
                android:autofillHints=""
                android:background="@color/transparent"
                android:hint="@string/label_write_message_here"
                android:inputType="textAutoComplete"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/white"
                android:layout_toLeftOf="@+id/send_message_btn"
                android:layout_toRightOf="@+id/attach_image_file_btn">

            </EditText>

            <ImageView
                android:id="@+id/send_message_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_send"
                android:contentDescription="@string/description_send_icone"
                android:layout_alignParentRight="true">

            </ImageView>

        </RelativeLayout>

    </RelativeLayout>
</layout>